--- a/app/src/main/res/layout/activity_f1_section01.xml
+++ b/app/src/main/res/layout/activity_f1_section01.xml
@@ -62,6 +62,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:paddingEnd="8dp"
                             android:orientation="vertical">
 
                             <LinearLayout
@@ -74,7 +75,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
-
+                                    style="@null"
                                     android:text="@string/studyId"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                     android:textStyle="bold" />
@@ -85,6 +86,8 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="center"
+                                    style="@null"
+
                                     android:text="35019"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                             </LinearLayout>
@@ -99,6 +102,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
+                                    style="@null"
 
                                     android:text="@string/RS7"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -110,6 +114,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="center"
+                                    style="@null"
 
                                     android:text="AGAS04068A1"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -126,6 +131,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
+                                    style="@null"
 
                                     android:text="@string/RS10"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -137,6 +143,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="center"
+                                    style="@null"
 
                                     android:text="SAIRA"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -153,6 +160,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
+                                    style="@null"
 
                                     android:text="@string/RS11"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -164,6 +172,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="center"
+                                    style="@null"
 
                                     android:text="M.HUSSAIN"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -180,6 +189,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
+                                    style="@null"
 
                                     android:text="@string/RS13"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -191,6 +201,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="center"
+                                    style="@null"
 
                                     android:text="DOB"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -208,6 +219,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
+                                    style="@null"
 
                                     android:text="@string/RS14"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -219,6 +231,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="center"
+                                    style="@null"
 
                                     android:text="Months"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -235,6 +248,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
+                                    style="@null"
 
                                     android:text="@string/gender"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -246,6 +260,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:gravity="center"
+                                    style="@null"
 
                                     android:text="Male"
                                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -354,6 +369,7 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/RS16cv"
+
                     style="@style/cardView">
 
                     <LinearLayout
