--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -418,12 +418,14 @@
                         android:orientation="horizontal">
 
                         <android.support.v7.widget.CardView
+                            android:id="@+id/uploadData"
                             android:layout_width="0dp"
                             android:layout_height="120dp"
                             android:layout_margin="@dimen/cardview_compat_inset_shadow"
                             android:layout_weight="1"
                             android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground">
+                            android:foreground="?android:attr/selectableItemBackground"
+                            android:onClick="@{() -> callback.syncServer()}">
 
                             <RelativeLayout
                                 android:layout_width="match_parent"
