--- a/app/src/main/res/layout/item_child_list.xml
+++ b/app/src/main/res/layout/item_child_list.xml
@@ -4,26 +4,46 @@
 
 
     <android.support.v7.widget.CardView
-        style="@style/cardView"
+        android:background="@drawable/card_design"
         android:id="@+id/parentLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:elevation="1dp"
-        android:padding="16dp"
-        android:radius="2dp">
+        android:padding="16dp">
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorPrimary">
+
+                    <TextView
+                        android:id="@+id/childIndex"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="13"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="16dp"
+                    android:layout_height="match_parent" />
 
 
                 <ImageView
@@ -35,6 +55,7 @@
 
 
                 <LinearLayout
+                    android:padding="16dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -99,6 +120,7 @@
 
 
                 <LinearLayout
+                    android:padding="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
@@ -114,12 +136,12 @@
 
 
                     <TextView
-                        android:padding="10dp"
                         android:id="@+id/child_status"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/enrolled"
                         android:gravity="center"
+                        android:padding="10dp"
                         android:text="Selected"
                         android:textColor="@color/black" />
 
@@ -130,6 +152,8 @@
 
 
         </LinearLayout>
+
+
     </android.support.v7.widget.CardView>
 
 
