--- a/app/src/main/res/layout/activity_f1_section05.xml
+++ b/app/src/main/res/layout/activity_f1_section05.xml
@@ -2002,7 +2002,40 @@
 
                 </android.support.v7.widget.CardView>
             </LinearLayout>
+            <!--RS77 - Radio-->
+            <android.support.v7.widget.CardView
+                android:id="@+id/RS79cv"
+                style="@style/cardView">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="@string/RS79"
+                        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                    <RadioGroup
+                        android:id="@+id/RS79"
+                        style="@style/radiogroup"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:id="@+id/RS79a"
+                            style="@style/radiobutton"
+                            android:layout_weight="1"
+                            android:text="@string/yes" />
+
+                    </RadioGroup>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
 
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
