--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -204,7 +204,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-
             android:orientation="vertical">
 
             <TextView
@@ -326,28 +325,56 @@
                     <!--android:text="aku?dmu"-->
 
                 </LinearLayout>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
                 <Button
                     android:id="@+id/email_sign_in_button"
                     style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:background="@color/colorAccent"
-                    android:padding="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:background="@drawable/buttonshapewhitebg"
                     android:text="@string/action_sign_in"
+                    android:textAllCaps="false"
+                    android:textStyle="bold"
+                    android:textColor="#96ffffff"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/syncData"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/buttonshapewhitebg"
+                    android:text="@string/btnSync"
+                    android:textAllCaps="false"
+                    android:textColor="#96ffffff"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
+
             </LinearLayout>
 
 
             <TextView
-                android:id="@+id/syncData"
+                android:id="@+id/syncData1"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:padding="16dp"
-                android:text="Always sync data before first use. Click Here to SYNC"
+                android:text="Always sync data before first use. Click to SYNC Button"
                 android:textColor="@color/gray"
                 android:textStyle="bold" />
 
