--- a/app/src/main/res/layout/item_child_list.xml
+++ b/app/src/main/res/layout/item_child_list.xml
@@ -4,11 +4,11 @@
 
 
     <android.support.v7.widget.CardView
-        android:background="@drawable/card_design"
         android:id="@+id/parentLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:background="@drawable/card_design"
         android:elevation="1dp"
         android:padding="16dp">
 
@@ -55,12 +55,12 @@
 
 
                 <LinearLayout
-                    android:padding="16dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
 
                     <TextView
@@ -120,11 +120,11 @@
 
 
                 <LinearLayout
-                    android:padding="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
                     <TextView
                         android:id="@+id/studyID"
