--- a/app/src/main/res/layout/activity_f1_section05.xml
+++ b/app/src/main/res/layout/activity_f1_section05.xml
@@ -742,6 +742,7 @@
                             android:id="@+id/RS6798"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:tag="-1"
                             android:text="@string/dkn" />
                     </LinearLayout>
 
