--- a/app/src/main/res/layout/activity_f1_section05.xml
+++ b/app/src/main/res/layout/activity_f1_section05.xml
@@ -38,6 +38,37 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+
+                <!--RS15-->
+                <android.support.v7.widget.CardView
+                    android:id="@+id/RS15cv"
+                    style="@style/cardView">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="@style/i_textview"
+                            android:text="@string/RS15" />
+
+                        <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
+                            android:id="@+id/RS15"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_weight="70"
+                            android:focusable="false"
+                            android:hint="DD-MM-YYYY"
+                            android:textColor="@android:color/black"
+                            app:dateFormat="dd-MM-yyyy"
+                            app:maxDate="CR_DATE" />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
                 <!--RS50 - Radio-->
                 <android.support.v7.widget.CardView
                     android:id="@+id/RS50cv"
@@ -729,6 +760,7 @@
                             android:textAppearance="?android:attr/textAppearanceLarge" />
 
                         <EditText
+                            android:hint="@string/RS67a"
                             android:id="@+id/RS67"
                             style="@style/textInput"
                             android:layout_width="match_parent"
