--- a/app/src/main/res/layout/activity_forms_list.xml
+++ b/app/src/main/res/layout/activity_forms_list.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.aku.hassannaqvi.rsvstudy.FormsList">
+    tools:context=".FormsList">
 
 
     <TextView
